fix som font problems on ios

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   src: url("/assets/fonts/LEMONMILK-Bold.otf");
 
   font-family: "Bebas Neue";
-  src: url("/assets/fonts/BebasNeue-Regular.otf");
+  src: url("/assets/fonts/BebasNeue-Regular.otf") format("opentype");
 }
 :root {
   /* fonts */
